overlays/openshift-patches/dashboard-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: tekton-dashboard
  namespace: tekton-pipelines
  labels:
    app: tekton-dashboard
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: proxy-tls
spec:
  ports:
    - port: 9097
      $patch: delete
    - name: http
      protocol: TCP
      port: 443
      targetPort: 8443
  selector:
    app: tekton-dashboard
